@@ -1,3 +1,8 @@
+2003-09-27  Joseph P. Skudlarek  <Jskud@Jskud.com>
+ 
+ 	* DLD-FUNCTIONS/minmax.cc (min, max): Use @deftypefn machinery,
+ 	doc missing semantics, and add more examples to texinfo strings.
+
 2003-09-26  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* load-save.cc (read_mat5_binary_element): Return early if the
